# django-dynamic-raw-id

./: .coveragerc  .editorconfig  .env  .eslintrc.js  .gitignore  .python-version  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  release.sh  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
coverage_report/: dynamic_raw_id___init___py.html  dynamic_raw_id_admin_py.html  dynamic_raw_id_filters_py.html  dynamic_raw_id_models_py.html  dynamic_raw_id_urls_py.html  dynamic_raw_id_views_py.html  dynamic_raw_id_widgets_py.html  index.html  status.json
django_dynamic_raw_id.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
dynamic_raw_id/: admin.py  filters.py  urls.py  views.py  widgets.py
dynamic_raw_id/static/dynamic_raw_id/js/: dynamic_raw_id.js
dynamic_raw_id/templates/dynamic_raw_id/admin/filters/: dynamic_raw_id_filter.html
dynamic_raw_id/templates/dynamic_raw_id/admin/widgets/: dynamic_raw_id_field.html  dynamic_raw_id_field_dj111.html
dynamic_raw_id/tests/: conftest.py  test_admin.py  test_admin_changelist.py  test_admin_inlines.py  test_django_admin.py  test_integrity.py  test_selenium.py
dynamic_raw_id/tests/testapp/: admin.py  models.py  settings.py  urls.py
dynamic_raw_id/tests/testapp/migrations/: 0001_initial.py
dynamic_rawid/: admin.py  filters.py  urls.py  views.py  widgets.py
dynamic_rawid/static/dynamic_rawid/js/: salmonella.js
dynamic_rawid/templates/dynamic_rawid/admin/filters/: dynamic_rawid_filter.html
dynamic_rawid/templates/dynamic_rawid/admin/widgets/: dynamic_rawid_field.html  dynamic_rawid_field_dj111.html
dynamic_rawid/tests/: test_integrity.py
dynamic_rawid/tests/testapp/: admin.py  models.py  settings.py  urls.py
dynamic_rawid/tests/testapp/migrations/: 0001_initial.py  0002_auto_20171206_1606.py  0003_auto_20180117_1130.py
project_example/: README  manage.py  requirements.pip  setup.py
project_example/project_example/: models.py  settings.py  urls.py  wsgi.py
project_example/project_example/apps/test_salmonella/: admin.py  models.py
project_example/project_example/conf/local/: __init__.py  urls.py
project_example/project_example/conf/test/: __init__.py  urls.py
salmonella/: __init__.py  admin.py  filters.py  urls.py  views.py  widgets.py
salmonella/static/: salmonella.js
salmonella/static/salmonella/js/: salmonella.js
salmonella/templates/salmonella/: label.html  multi_label.html
salmonella/templates/salmonella/admin/filters/: salmonella_filter.html
salmonella/templates/salmonella/admin/widgets/: salmonella_field.html  salmonella_field_dj111.html
salmonella/tests/: test_integrity.py  urls.py
salmonella/tests/testapp/: admin.py  models.py  settings.py  urls.py
salmonella/tests/testapp/migrations/: 0001_initial.py  0002_auto_20171206_1606.py  0003_auto_20180117_1130.py
