[metadata]
name = django-dynamic-raw-id
version = 2.7
description = raw_id_fields widget replacement that handles display of an object's string value on change.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner, Seth Buntin, Yann Malet
author_email = info@lincolnloop.com
url = https://github.com/lincolnloop/django-dynamic-raw-id
keywords = django, widget, field, admin, raw-id, foreignkey
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=2.7
install_requires =
    django>=1.11
    six>=1.10.0

[options.extras_require]
tests =
  selenium
  coverage
  pytest
  pytest-cov
  pytest-django

[isort]
known_first_party = dynamic_raw_id
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = dynamic_raw_id
branch = True
omit =
    dynamic_raw_id/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/django-dynamic-raw-id

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
addopts =
    --ds=dynamic_raw_id.tests.testapp.settings
    --cov=./dynamic_raw_id
    --cov-append
    --cov-branch
    --nomigrations
    --reuse-db
